Game version 0.2.0 - Fill page - Different game size - Seperate game size and display size

--- a/src/client/src/index.css
+++ b/src/client/src/index.css
@@ -1,9 +1,7 @@
-#game {
-    border: 1px solid white;
-
-    /* TODO: flex instead */
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
 }
