--- a/src/Client/src/neutralize.css
+++ b/src/Client/src/neutralize.css
@@ -1,7 +1,6 @@
 /*
- Neutralization of HTML elements
- https://github.com/twbs/bootstrap/blob/main/scss/_reboot.scss 
- https://github.com/necolas/normalize.css/blob/master/normalize.css
+ Neutralization of styles
+ https://github.com/sindresorhus/modern-normalize/blob/main/modern-normalize.css
 */
 
 *,
